tests/spec/emit/snapshots/embedded_imported_non_stringer_string_method_blocks_shadow.snap
---
source: tests/spec/emit/imports.rs
description: |
  
  import "go:example.com/lib"
  
  #[display]
  struct D { pub x: int }
  
  struct C {
    embed lib.N,
    embed D,
    pub n: int,
  }
---
package main

import (
	"example.com/lib"
	"fmt"
)

type D struct {
	X int
}

func (d D) String() string {
	return fmt.Sprintf("D { x: %v }", d.X)
}

func (d D) toString() string {
	return d.String()
}

type C struct {
	lib.N
	D
	N int
}
