tests/spec/emit/snapshots/embedded_interface_chain_uses_declared_comparable_bounds.snap
---
source: tests/spec/emit/types.rs
description: |
  
  interface A<K: Comparable> {
    fn get(m: Map<K, int>) -> int
  }
  
  interface B<K: Comparable> {
    embed A<K>
  }
  
  interface C<K: Comparable> {
    embed B<K>
  }
  
  fn main() { let _ = 0 }
---
package main

type A[K comparable] interface {
	get(map[K]int) int
}

type B[K comparable] interface {
	A[K]
}

type C[K comparable] interface {
	B[K]
}

func main() {}
