tests/spec/emit/snapshots/embedded_interface_comparable_transitive.snap
---
source: tests/spec/emit/types.rs
description: |
  
  interface A<K> {
    fn get(self, m: Map<K, int>) -> int
  }
  
  interface B<K> {
    impl A<K>
  }
  
  interface C<K> {
    impl B<K>
  }
  
  fn main() { let _ = 0 }
---
package main

type A[K comparable] interface {
	get(map[K]int) int
}

type B[K comparable] interface {
	A[K]
}

type C[K comparable] interface {
	B[K]
}

func main() {}
