tests/spec/emit/snapshots/embedded_interface_stringer_and_display_are_ambiguous_no_shadow.snap
---
source: tests/spec/emit/types.rs
description: |
  
  #[display]
  struct D { pub x: int }
  
  interface I {
    fn string() -> string
  }
  
  struct C {
    embed D,
    embed I,
    pub n: int,
  }
---
package main

import "fmt"

type D struct {
	X int
}

func (d D) String() string {
	return fmt.Sprintf("D { x: %v }", d.X)
}

func (d D) toString() string {
	return d.String()
}

type I interface {
	String() string
}

type C struct {
	D
	I
	N int
}
