tests/spec/emit/snapshots/embedded_interface_uses_declared_comparable_bound.snap
---
source: tests/spec/emit/types.rs
description: |
  
  interface A<K: Comparable> {
    fn get(m: Map<K, int>) -> int
  }
  
  interface B<K: Comparable> {
    embed A<K>
  }
  
  fn main() { let _ = 0 }
---
package main

type A[K comparable] interface {
	get(map[K]int) int
}

type B[K comparable] interface {
	A[K]
}

func main() {}
