tests/spec/emit/snapshots/embedded_interface_without_stringer_leaves_display_shadow.snap
---
source: tests/spec/emit/types.rs
description: |
  
  #[display]
  struct D { pub x: int }
  
  interface I {
    fn area() -> int
  }
  
  struct C {
    embed D,
    embed I,
    pub n: int,
  }
---
package main

import "fmt"

type D struct {
	X int
}

func (d D) String() string {
	return fmt.Sprintf("D { x: %v }", d.X)
}

func (d D) toString() string {
	return d.String()
}

type I interface {
	area() int
}

type C struct {
	D
	I
	N int
}

func (c C) String() string {
	return fmt.Sprintf("{%v %v %v}", c.D, c.I, c.N)
}
