tests/spec/emit/snapshots/embedded_intermediate_user_stringer_stops_shadow_walk.snap
---
source: tests/spec/emit/types.rs
description: |
  
  #[display]
  struct Logger { pub prefix: string }
  
  struct Server {
    embed Logger,
    pub port: int,
  }
  
  impl Server {
    fn string(self) -> string {
      "srv"
    }
  }
  
  struct Cluster {
    embed Server,
    pub name: string,
  }
---
package main

import "fmt"

type Logger struct {
	Prefix string
}

func (l Logger) String() string {
	return fmt.Sprintf("Logger { prefix: %v }", l.Prefix)
}

func (l Logger) toString() string {
	return l.String()
}

type Server struct {
	Logger
	Port int
}

func (s Server) String() string {
	return "srv"
}

type Cluster struct {
	Server
	Name string
}
